solves header spacing issue and portfolio text blocks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,47 +1,62 @@
 body {
+    background-image: url("../images/white-waves.png");
+
 }
 
 
 ul {
     list-style-type: none;
-    margin: 20px;
-    padding: 20px;
-    float: right;
     
 }
 
 header {
+    height: 77px;
+    margin: -8px;
+    padding-left: 10px;
+    background-color: white;
 
 }
 
-main {
-    margin-left: 150px;
-    margin-right: 150px;
+main { 
+    margin-bottom: 50px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: #ffffff;
-    background-image: url("../images/white-waves.png");
-
+    border: 2px solid #dddddd;
+    padding-top: 10px;
+    width: 960px;
+    
 }
 
 nav {
-    
-    
+    display: inline-block;
+    margin-left: 480px;
+    margin-right: 70px;
 }
 
 h1 {
+    display: inline-block;
+    margin-left: 228px;
+    margin-bottom: 200px;
     font-family: 'Georgia', Times, "Times New Roman", serif;
     background-color: #4aaaa5;
     color: white;
+    padding: 10px;
+
 }
 
 h2 {
+    
+    margin-left: 20px;
     color: #4aaaa5;
     
 }
 
 
 li  {
-    padding: 20px;
     display: inline;
+    padding: 0 20px;
     border-right: 1px solid #bbb;
 }
 
@@ -49,16 +64,85 @@ li:last-child {
     border-right: none;
   }
 
-img {
+/* img {
     float: left;
-}
+    margin-right: 20px;
+    margin-left: 20px;
+} */
 
 p {
+    margin-right: 10px;
+    margin-left: 10px;
+    padding-left: 10px;
     
   }
 
   footer {
       background-color: #666666;
+      border-top: 8px solid #4aaaa5;
+      position: fixed;
+      text-align: center;
+      width: 100%;
+      left: 0;
+      bottom: 0;
   }
 
+  hr { 
+    display: block; 
+    overflow: hidden;
+    border-style: inset;
+    border-width: 1px;
+}
+
+  section {
+    
+
+
+  }
+
+  form {
+      margin-left: 20px;
+      margin-right: 20px;
+  }
+
+  .button {
+      background-color: #4aaaa5;
+      color: white;
+      margin-top: 10px;
+      margin-bottom: 10px;
+     
+  }
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
   
+  /* Create two equal columns that sits next to each other */
+  .column {
+    flex: 50%;
+    padding: 0 4px;
+  }
+  
+  /* .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+  } */
+ 
+  .container {
+    position: absolute;
+  }
+   
+/* 
+  .text-block {
+    position: relative;
+    width: 120px;
+    bottom: 20px;
+    right: 20px;
+    background-color: black;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px; 
+  }
+   */
